# CORAL

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .yaml  1. Introduction.ipynb  2. Plotting Basics.ipynb  AvgUtilization.py  CHANGELOG.md  CORAL Introduction.ipynb  MaxVessels.py  README.md  README.rst  VesselUtilization.py  coral_example_setup.ipynb  coral_helpers.py  coral_imports.py  coral_plotting.py  coral_postproc.py  coral_run_project.py  data.yml  fixed_floating.ipynb  ordered_postproc.py  pyproject.toml  run_comp_pptx.py  run_coral.py  run_coral_pptx.py  run_gaps.ipynb  run_natl_gaps.py  setup.cfg  setup.py  test_comparisons.ipynb  test_comparisons_2.ipynb  tier1_high.csv  tier1_low.csv  tier1_mid.csv  tier_1_plots.ipynb  unpack_yaml.ipynb
.github/workflows/: python-publish.yaml
.ipynb_checkpoints/: coral_example_setup-checkpoint.ipynb  fixed_floating-checkpoint.ipynb
CORAL/: __init__.py  _version.py  library.py  manager.py  pipelines.py  random_qs.ipynb  utils.py
analysis/: base.yaml  base_float.yaml  cases_test.xlsx  helpers.py  main.py  plot_routines.py
analysis/.ipynb_checkpoints/: base-checkpoint.yaml
analysis/configs/: base.yaml  base_float.yaml
analysis/pipelines/: all_us.csv  base_baseline_pipeline.csv  base_baseline_pipeline.xlsx  base_pipeline.csv  best_path_pipeline_adjusted_start.csv  big_turb_pipeline.csv  coral_ex_pipeline.csv  example_atlantic_2024.csv  (+23 more)
example_analysis/: base.yaml
postprocessing/: coral_helpers.py  coral_imports.py  coral_plotting.py  coral_postproc.py
tests/: test_GlobalManager.py  test_pipeline.csv
(+568 files in other folders)
